<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">ControlCash</string>
    <string name="add_receita">Add Income</string>
    <string name="add_despesa">Add Expense</string>
    <string name="del_receita">Delete Income</string>
    <string name="del_despesa">Delete Expense</string>
    <string name="txtCategoria">Category Name</string>
    <string name="add_categoria">Add Category</string>
    <string name="del_categoria">Delete Category</string>
    <string name="total">Total</string>
    <string name="relatorios_saldos">Balance Reports</string>
    <string name="relatorios_saldos_categorias">Distribution by Category</string>
    <string name="receitas_categoria">Incomes</string>
    <string name="despesas_categoria">Expenses</string>
    <string name="despesas">Expenses</string>
    <string name="receitas">Incomes</string>
    <string name="nome">Name</string>
    <string name="valor">Value</string>
    <string name="categoria">Category</string>
    <string name="data">Date</string>
    <string name="salvar">Save</string>
    <string name="categorias_cadastradas">Categories Added</string>
    <string name="receita">Income</string>
    <string name="despesa">Expense</string>
    <string name="despesas_cadastradas">Expenses Added</string>
    <string name="receitas_cadastradas">Incomes Added</string>
    <string name="operacao_ok">Operation successful!</string>
    <string name="altera_mes">Change Time Range</string>
    <string name="ano">Year</string>
    <string name="mes">Month</string>
    <string name="altera_faixa_tempo">Change Base Date</string>
    <string name="id_export">Category Code</string>
    <string name="info">Information</string>
    <string name="info_id_export">Complete this field if you want to use it as a category code at the time of export.</string>
    <string name="nome_arquivo">Filename</string>
    <string name="planilha">SpreadSheet</string>
    <string name="exportar">Export</string>
    <string name="positive_button">Ok</string>
    <string name="todas">All</string>
    <string name="export_receita_despesa">Export incomes and expenses</string>
    <string name="objeto_movimentacao_invalido">Invalid movimentation</string>
    <string name="cancelar">Cancel</string>
    <string name="arquivo_criado">File created in</string>

</resources>